--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
             			</ul>
             		</div>
 					<h3>Etudes</h3>
-                    <h4>déc 2015-2016 Formation CQP SIMPLON/OBJIS JAVA/Nouvelles Technologies. </h4> 
+                    <h4 class="cqp"> <a href="https://docs.google.com/presentation/d/1Mx1S1pXysqEVuWQgjp9Gi58aCVdvXtHxbB-UeijXkuk/pub?start=false&loop=false&delayms=60000#slide=id.g8c7cfc722_081" class="btn     btn-lg btn-outline" title="Lien vers la plaquette de présentation">déc 2015-2016 Formation CQP DNT </a></h4> 
             		<h4>2008-2012 </strong><a href="http://www.theses.fr/2012EMSE0652" title="Lien vers la thèse"><span id="doctorat">Doctorat</span></a></strong>, <em>Ecole des Mines</em>, Saint-Etienne, Génie des procédés</h4>
             		<ul>
             			<li>Cours doctoraux : gestion de projet, labview, Eléments finis</li>
